tests/fail/and.py
5 and 5
None and 5
5 and None
